[package]
name = "edn-rs"
version = "0.16.7"
authors = ["Julia Naomi <jnboeira@outlook.com>",  "Otavio Pace <otaviopp8@gmail.com>"]
description = "Crate to parse and emit EDN"
readme = "README.md"
documentation = "https://docs.rs/edn-rs/"
repository = "https://github.com/naomijub/edn-rs"
keywords = ["EDN"]
license = "LGPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["futures"]
json = ["regex"]

[dependencies]
regex = {version = "1", optional = true }
futures = {version = "0.3.5", optional = true }

[dev-dependencies]
tokio = {version = "0.2.22", features = ["macros"] }
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
edn-derive = "0.5.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "tagged_parse"
harness = false

[[bench]]
name = "serialize"
harness = false

[[example]]
name = "async"
required-features = ["async"]

[[example]]
name = "json_to_edn"
required-features = ["json"]

[[example]]
name = "edn_to_json"
required-features = ["json"]