[package]
name = "edn-rs"
version = "0.17.4"
authors = ["Julia Naomi <jnboeira@outlook.com>",  "Eva Pace <eba.pachi@gmail.com>", "Kevin Nakamura <grinkers@grinkers.net>"]
description = "Crate to parse and emit EDN"
readme = "README.md"
documentation = "https://docs.rs/edn-rs/"
repository = "https://github.com/edn-rs/edn-rs"
keywords = ["EDN", "no_std"]
license = "MIT"
edition = "2021"

[lints.rust]
rust_2018_idioms = "warn"
future-incompatible = "warn"
unsafe_code = "deny"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[features]
default = ["sets", "std"]
json = ["regex"]
sets = ["ordered-float"]
std = []

[dependencies]
regex = { version = "1", optional = true }
ordered-float = { version = "4.1", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.33", features = ["full"] }
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
edn-derive = { git = "https://github.com/Grinkers/edn-derive.git" } # TODO pin to proper release 

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "tagged_parse"
harness = false

[[bench]]
name = "serialize"
harness = false

[[example]]
name = "async"

[[example]]
name = "json_to_edn"
required-features = ["json"]

[[example]]
name = "edn_to_json"
required-features = ["json"]
