[package]
name = "edn-rs"
version = "0.19.0"
authors = ["Julia Naomi <jnboeira@outlook.com>",  "Eva Pace <eba.pachi@gmail.com>", "Kevin Nakamura <grinkers@grinkers.net>"]
description = "[DEPRECATED]: Crate to parse and emit EDN"
readme = "README.md"
documentation = "https://docs.rs/edn-rs/"
repository = "https://github.com/edn-rs/edn-rs"
keywords = ["EDN", "no_std"]
license = "MIT"
edition = "2021"

[lints.rust]
rust_2018_idioms = { level = "warn", priority = 3 }
future-incompatible = "deny"
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
format_push_string = { level = "allow", priority = 9 }
pedantic = { level = "deny", priority = 8 }
redundant_clone = { level = "deny", priority = 7 }

[features]
default = ["std"]
json = ["regex"]
std = []

[dependencies]
edn-parser = { git = "https://github.com/naomijub/edn-parser" }
serde_json = "1.0"
regex = { version = "1", optional = true }
ordered-float = { version = "4.1", default-features = false }

[dev-dependencies]
tokio = { version = "1.33", features = ["full"] }
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
edn-derive = { git = "https://github.com/edn-rs/edn-derive.git" } # TODO pin to release

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "tagged_parse"
harness = false

[[bench]]
name = "serialize"
harness = false

[[example]]
name = "async"

[[example]]
name = "json_to_edn"
required-features = ["json"]

[[example]]
name = "edn_to_json"
required-features = ["json"]
